--- a/final-project-fe/Pages/MentorRegulations.cshtml
+++ b/final-project-fe/Pages/MentorRegulations.cshtml
@@ -71,7 +71,9 @@
                     <div class="policy-requirements">
                         <ul>
                             <li>Course quality assurance</li>
-                            <li>Completion of the Mentor Orientation Program (mandatory before starting)</li>
+                            @* <li>Completion of the Mentor Orientation Program (mandatory before starting)</li> *@
+                            <li>Each course must have at least 1 Assignment that serves as the final test</li> @* new policy *@
+                            <li>Each month, a schedule must be created for Assignments for each course</li> @* new policy *@
                         </ul>
                     </div>
                 </div>
